k8s-rpi-apps-external-services/mikrot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mikrotik
  namespace: external-services
spec:
  ports:
    - name: mikrotik-api
      protocol: TCP
      port: 443
      targetPort: 7443
